--- a/flitter/public/index.html
+++ b/flitter/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="./flitterLogo2-removebg-preview.png">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="icon" href="../src/assets/flitter-icon-whiteBgr.png">
+    <title>flitter</title>
   </head>
   <body>
     <noscript>
